# django-vite-simple

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
vitejs/: apps.py
vitejs/templatetags/: vite.py
